added updates to lab

--- a/CoffeeShopLab/Views/CoffeeShop/AddUser.cshtml
+++ b/CoffeeShopLab/Views/CoffeeShop/AddUser.cshtml
@@ -5,6 +5,8 @@
 
 <h1>Thank you for registering!</h1>
 
-<h2>Welcome @Model.FirstName!</h2>
+<h2>Welcome @Model.FirstName @Model.LastName!</h2>
+<h2>Your User name is @Model.UserName</h2>
+<h2>Your password is @Model.Password</h2>
 
 @model CoffeeShopLab.Models.User
